# trading-dashboard

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FUNDAMENTALS_DATA_GUIDE.md  README.md  dashboard.py  dashboard_shared.py  main.py  order_proxy.py  pyproject.toml  render.yaml  requirements-dashboard.txt  requirements.txt
.github/workflows/: daily-mark.yml  monthly-rebalance.yml  quarterly-bedrock-rebalance.yml
.streamlit/: config.toml
configs/: nifty_trend_v1.yaml  nifty_trend_v2.yaml  smallcap_momentum_v1.yaml  smallcap_momentum_v2.yaml  smallcap_momentum_v2_angel.yaml  smallcap_momentum_v2_live.yaml  value_quality_v1.yaml  value_quality_v1_live.yaml
data/: vq_scores_latest.json
data/mc_exports/: ABB.json  ABCAPITAL.json  ABFRL.json  ACC.json  ADANIGREEN.json  ADANIPOWER.json  AEGISLOG.json  ALKEM.json  AMBUJACEM.json  APLAPOLLO.json  APOLLOTYRE.json  ASHOKLEY.json  ASTRAL.json  ATGL.json  AUBANK.json  AUROPHARMA.json  BAJAJELEC.json  BAJAJHLDNG.json  BALKRISIND.json  BANKBARODA.json  BHEL.json  (+147 more)
outputs/: robustness_comparison_20260418_014039.csv
pages/: 1_Momentum.py  2_Value_Quality.py  3_Portfolio.py  4_About.py  5_Feedback.py  6_Rebalance.py  alpha.py  live.py
scripts/: backfill_paper_marks.py  bedrock_live_rebalance.py  daily_live_mark.py  daily_mark.py  daily_mark.sh  generate_factsheet.py  monthly_angel_rebalance.py  monthly_live_rebalance.py  monthly_paper_rebalance.sh  quarterly_bedrock_rebalance.sh  refresh_vq_scores.py  run_robustness.py  show_holdings.py  telegram_summary.py
static/: robots.txt  sitemap.xml
tests/: test_momentum.py
(+87 files in other folders)
